Refactor: OpenAPI Definition to support Async APIs
